# cabal-sat

./: .gitignore  README.md  cabal-sat.cabal  cabal.project  sudoku.cnf
cbl/: sudoku.cabal
src/: cabal-sat.hs
