cabal-version: 3.0
name:          cabal-sat
version:       0

common language
  default-language:   Haskell2010
  default-extensions:
    DeriveGeneric
    DeriveTraversable
    GADTs
    GeneralizedNewtypeDeriving
    PatternSynonyms
    RankNTypes

executable cabal-sat
  import:         language
  hs-source-dirs: src
  main-is:        cabal-sat.hs
  build-depends:
    , base          ^>=4.17.0.0
    , containers
    , transformers
